2010-09-19  Robert Larice
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/grid.c :
    fix some ancient \n\r and \r\n typos

2010-09-19  Robert Larice
 * src/frontend/quote.c :
    cp_unqoute(), avoid segfault when applied to a single quote "\""
    testcase:
      .control
      echo "--"
      .endc
    FIXME, still not completely done,
      inp_stripcomments_line()
    will fail on comments inside of strings

2010-09-19 Holger Vogt
 * src/spinit.in, configure.ac: allow lib64 in spinit (bug no. 3054424)
   if libdir contains lib64
 * compile_min.sh: new script for compiling MINGW 32 and 64 bit

2010-09-18 Holger Vogt
 * src/XSPICE/icm/makedefs.in: external LDFLAGS enabled for MINGW

2010-09-18  Robert Larice
 * contrib/mslib/liblook ,
 * contrib/mslib/libprm ,
 * contrib/scripts/liblook ,
 * contrib/scripts/libprm ,
 * contrib/vbic/sgp2vbic ,
 * contrib/vbic/vbic2sgp *
    some scripts need bash
      this patch is from debian, thanks

2010-09-18 Dietmar Warning
 * src/spicelib/devices/*/isrcacct.c, vsrcacct.c: Correct bitwise operation

2010-09-17 Holger Vogt
 * visualc/include/config.h, vngspice.sln, vngspice.vcproj:
   new configurations release, Debug, and ReleaseOMP

2010-09-17  Robert Larice
 * .cvsignore ,
 * Makefile.am ,
 * configure.ac ,
 * config/.cvsignore :
    undo "use a subdirectory `config' for autoconfigure ..." from today
    this has broken `configure' for xgraph

2010-09-17  Robert Larice
 * src/frontend/Makefile.am :
    fix parse-bison.y dependencies

2010-09-17  Robert Larice
 * autogen.sh :
    run aclocal first, then libtoolize

2010-09-17  Robert Larice
 * Makefile.am ,
 * src/include/Makefile.am ,
 * src/maths/misc/Makefile.am ,
 * src/maths/poly/Makefile.am ,
 * src/spicelib/devices/ndev/Makefile.am ,
 * src/xspice/Makefile.am ,
 * tests/bsim3soi/Makefile.am ,
 * tests/bsim3soidd/Makefile.am ,
 * tests/bsim3soifd/Makefile.am ,
 * tests/bsim3soipd/Makefile.am ,
 * tests/mesa/Makefile.am :